--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@
     <input type="color" name="Color2" id="color2" value="#AC1856" />
     <h2>Current Css Background</h2>
     <h3></h3>
+    <input type="button" value="Randomize" id="random" />
     <script src="Generator.js"></script>
   </body>
 </html>
