--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="Generator.css" />
   </head>
   <body id="Bounce">
-    <h1>TGC Background Generator</h1>
+    <h1>UX_Dev Background Generator</h1>
     <input type="color" name="Color1" id="color1" value="#18AC6E" />
     <input type="color" name="Color2" id="color2" value="#AC1856" />
     <h2>Current Css Background</h2>
